todo GAPP:
- processdialog, minimize or show on taskbar. Going to desktop fails now
- add log templates
- make more screen sizable, but also settings screen
- add color option for corrected in cache list

todo GAPP SF:
- Open Areas map

todo GAPP/GAPP SF

V1.10.1.0

- gapp: fix: Export to HTML now has meta tag utf-8 encoded for correct display of some characters

V1.10.0.0

- gapp: add: Export to HTML plugin (like export to Excel but then to HTML)
- gapp: add: added tooltip to counters in the status bar on the main screen
- gappsf: add: Export to HTML (like export to Excel but then to HTML)

V1.9.21.0

- gapp: add: delete images from image folder for active or selected geocaches
- gapp: add: GAPP SF data storage plugin
- gapp: add option to set the log count for GPX export and export to Garmin
- gappsf: add: delete images from image folder for active or selected geocaches
- gappsf: fix: Shortcut assignment fix for dynamic menu items like action sequences
- gappsf: add: Export to GAPP data storage files
- gappsf: fix: Trackable groups

V1.9.20.0

- gapp: fix: added missing selected geocache marker to setup.
- gapp: change: moved extra geocache information to the absolute beginning of the description with GPX export
- gapp: add: Live API authorization with the default browser of the user
- gapp: LiveAPI, import geocaches now has option to select center and radius from google map
- gappsf: change: moved extra geocache information to the absolute beginning of the description with GPX export
- gappsf: add: trackable groups
- gappsf: add: Live API authorization with the default browser of the user
- gappsf: LiveAPI, import geocaches now has option to select center and radius from google map

V1.9.19.0

- gapp: fix: updating existing log text and geocache description
- gapp: fix: added missing selected geocache marker to setup.
- gapp: add: option to add extra geocache information to cache description with GPX export