@@ -36,9 +36,9 @@
                                 <ui:EnumBooleanConverter x:Key="enumBooleanConverter" />
                             </Grid.Resources>
                             <StackPanel >
-                                <RadioButton Margin="4" GroupName="selection" IsChecked="{Binding Path=TargetGeocaches, Converter={StaticResource enumBooleanConverter}, ConverterParameter=Active}" Content="{l:Translate Active}" />
-                                <RadioButton Margin="4" GroupName="selection" IsChecked="{Binding Path=TargetGeocaches, Converter={StaticResource enumBooleanConverter}, ConverterParameter=Selected}" Content="{l:Translate Selected}" />
-                                <RadioButton Margin="4" GroupName="selection" IsChecked="{Binding Path=TargetGeocaches, Converter={StaticResource enumBooleanConverter}, ConverterParameter=All}" Content="{l:Translate All}" />
+                                <RadioButton Margin="4" GroupName="selection" IsChecked="{Binding Path=TargetGeocaches, Converter={StaticResource enumBooleanConverter}, ConverterParameter=Active}" Content="{l:Translate Active}" IsEnabled="{Binding TargetGeocachesCanBeChanged}" />
+                                <RadioButton Margin="4" GroupName="selection" IsChecked="{Binding Path=TargetGeocaches, Converter={StaticResource enumBooleanConverter}, ConverterParameter=Selected}" Content="{l:Translate Selected}" IsEnabled="{Binding TargetGeocachesCanBeChanged}" />
+                                <RadioButton Margin="4" GroupName="selection" IsChecked="{Binding Path=TargetGeocaches, Converter={StaticResource enumBooleanConverter}, ConverterParameter=All}" Content="{l:Translate All}" IsEnabled="{Binding TargetGeocachesCanBeChanged}" />
                             </StackPanel>
 
                         </Grid>
